# cmake-base-qt

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
